[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Ceil.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Textures/aim.png" type="Texture" id=2]
[ext_resource path="res://Assets/Fonts/Zhizn.otf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/GUI.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 3 )

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="Inventory" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -100.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cell_1" parent="Inventory" instance=ExtResource( 1 )]
margin_left = 538.0
margin_top = 0.0
margin_right = 638.0
margin_bottom = 100.0

[node name="Cell_2" parent="Inventory" instance=ExtResource( 1 )]
margin_left = 642.0
margin_top = 0.0
margin_right = 742.0
margin_bottom = 100.0

[node name="Aim" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -10.0
margin_top = -10.0
margin_right = 10.0
margin_bottom = 10.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupMenu" type="PopupMenu" parent="."]
margin_left = 591.584
margin_top = 541.0
margin_right = 682.584
margin_bottom = 618.0
custom_fonts/font = SubResource( 2 )

[node name="Debug_Panel" type="VBoxContainer" parent="."]
visible = false
margin_right = 275.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_1" type="Label" parent="Debug_Panel"]
margin_right = 275.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_2" type="Label" parent="Debug_Panel"]
margin_top = 18.0
margin_right = 275.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_3" type="Label" parent="Debug_Panel"]
margin_top = 36.0
margin_right = 275.0
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_4" type="Label" parent="Debug_Panel"]
margin_top = 54.0
margin_right = 275.0
margin_bottom = 68.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_5" type="Label" parent="Debug_Panel"]
margin_top = 72.0
margin_right = 275.0
margin_bottom = 86.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="You_Win" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -199.0
margin_top = -50.0
margin_right = 199.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 1 )
text = "You Win"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="id_pressed" from="PopupMenu" to="." method="_on_PopupMenu_id_pressed"]
